add the detail pages.

--- a/myjob/src/main/webapp/content/main_user.css
+++ b/myjob/src/main/webapp/content/main_user.css
@@ -1,4 +1,4 @@
-body{font-family:"Microsoft YaHei","微软雅黑",Helvetica,"黑体",Arial,Tahoma;font-size:14px;width:1349px;display:block;border:1px solid silver;}body .top{border:1px solid silver;width:1349px;height:31px;padding-left:1000px;margin-left:-106px;line-height:31px;}
+body{font-family:"Microsoft YaHei","微软雅黑",Helvetica,"黑体",Arial,Tahoma;font-size:14px;display:block;border:1px solid silver;}body .top{border:1px solid silver;width:1349px;height:31px;padding-left:1000px;margin-left:-106px;line-height:31px;}
 body .logo{border:1px solid silver;height:70px;}body .logo .image{width:250px;display:inline;float:left;margin-right:50px;}
 body .logo .input-group{padding-top:18px;}
 body .logo .word{width:450px;}
