--- a/myjob/src/main/webapp/content/site.css
+++ b/myjob/src/main/webapp/content/site.css
@@ -2,6 +2,10 @@ header{
 	text-align: right;
 }
 
+body{
+	background-color: rgb(252,252,252);
+}
+
 footer{
 	text-align: center;
 }
@@ -66,4 +70,16 @@ nav .pager{
 
 .pagination>li>a,.pager a{
 	cursor: pointer;
+}
+
+.filter-options{
+	color: #005aa0;
+}
+
+.filter-options label:hover{
+	color: red;
+}
+
+.filter-options.empty input{
+	display: none;
 }
